trunk/Archive2/1e/2d9ddb29072465/output
main.cpp:6:5: error: unknown type name 'String'
    String muhDick = "Huuuuuuuuuuuuuuuuuge";
    ^
1 error generated.
